--- a/4/form.html
+++ b/4/form.html
@@ -24,7 +24,7 @@
               </a>
               </li>
               <li class="main-nav__item">
-                <a class="main-nav__link" href="form.html">
+                <a class="main-nav__link" href="catalog.html">
                   Фото и видео
                 </a>
               </li>
@@ -57,7 +57,7 @@
             <p class="review__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
           </div>
           <form class="review__filling-form filling-form" action="https://echo.htmlacademy.ru/" method="get">
-            <div class="filling-form__wrapper">
+            <div class="filling-form__wrapper filling-form__input-group">
               <fieldset class="filling-form__control">
                 <legend class="filling-form__title">Представьтесь:</legend>
                 <ul class="filling-form__list">
@@ -76,7 +76,7 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="filling-form__wrapper">
+            <div class="filling-form__wrapper  filling-form__input-group">
               <fieldset class="filling-form__control">
                 <legend class="filling-form__title">Контактная информация:</legend>
                 <ul class="filling-form__list">
@@ -91,7 +91,7 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="filling-form__wrapper filling-form__wrapper--wide">
+            <div class="filling-form__wrapper  filling-form__control-group">
               <fieldset class="filling-form__control">
                 <legend class="filling-form__title">Ваше общее впечатление:</legend>
                 <ul class="filling-form__list  filling-form__list--control">
@@ -119,7 +119,7 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="filling-form__wrapper filling-form__wrapper--wide">
+            <div class="filling-form__wrapper filling-form__control-group">
               <fieldset class="filling-form__control">
                 <legend class="filling-form__title">Посещенные достопримечательности:</legend>
                 <ul class="filling-form__list filling-form__list--control">
@@ -154,14 +154,16 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="filling-form__wrapper filling-form__wrapper--wide">
+            <div class="filling-form__wrapper filling-form__text-area">
               <fieldset class="filling-form__control">
                 <label class="filling-form__title" for="review-text">Опишите свои эмоции:</label>
                 <textarea class="filling-form__text-input control-input control-input--area" name="review-text" id="review-text" cols="30" rows="4" placeholder="Опишите подробно все свои восторги"></textarea>
               </fieldset>
+              <div class="filling-form__button-wrapper">
+                <button class="filling-form__button button" type="submit">Отправить отзыв</button>
+                <small class="filling-form__legend"> * — обязательные поля</small>
+              </div>
             </div>
-            <button class="filling-form__button button" type="submit">Отправить отзыв</button>
-            <small class="filling-form__legend"> * — обязательные поля</small>
           </form>
         </div>
       </section>
