--- a/4/form.html
+++ b/4/form.html
@@ -18,8 +18,8 @@
       <nav class="main-header__nav main-nav">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list main-nav__list--close">
-            <li class="main-nav__item" href="index.html">
-              <a class="main-nav__link">
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="index.html">
                 Главная
               </a>
               </li>
@@ -57,7 +57,7 @@
             <p class="review__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
           </div>
           <form class="review__filling-form filling-form" action="https://echo.htmlacademy.ru/" method="get">
-            <div class="filling-form__wrapper filling-form__input-group">
+            <div class="filling-form__input-group">
               <fieldset class="filling-form__control">
                 <legend class="filling-form__title">Представьтесь:</legend>
                 <ul class="filling-form__list">
@@ -76,7 +76,7 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="filling-form__wrapper  filling-form__input-group">
+            <div class="filling-form__input-group">
               <fieldset class="filling-form__control">
                 <legend class="filling-form__title">Контактная информация:</legend>
                 <ul class="filling-form__list">
@@ -91,7 +91,7 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="filling-form__wrapper  filling-form__control-group">
+            <div class="filling-form__control-group">
               <fieldset class="filling-form__control">
                 <legend class="filling-form__title">Ваше общее впечатление:</legend>
                 <ul class="filling-form__list  filling-form__list--control">
@@ -119,7 +119,7 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="filling-form__wrapper filling-form__control-group">
+            <div class="filling-form__control-group">
               <fieldset class="filling-form__control">
                 <legend class="filling-form__title">Посещенные достопримечательности:</legend>
                 <ul class="filling-form__list filling-form__list--control">
@@ -154,7 +154,7 @@
                 </ul>
               </fieldset>
             </div>
-            <div class="filling-form__wrapper filling-form__text-area">
+            <div class="filling-form__text-area">
               <fieldset class="filling-form__control">
                 <label class="filling-form__title" for="review-text">Опишите свои эмоции:</label>
                 <textarea class="filling-form__text-input control-input control-input--area" name="review-text" id="review-text" cols="30" rows="4" placeholder="Опишите подробно все свои восторги"></textarea>
